--- a/css/responsive.css
+++ b/css/responsive.css
@@ -155,7 +155,7 @@
 	}
 	.jb_map_banner_form{padding:50px;}
 	.blog_after_img{display:none;}
-	.mainmenu ul li a{
+	.mainmenu ul li > a{
 		padding:40px 16px 30px 16px;
 	}
 }
