--- a/fonts/icon/icon.css
+++ b/fonts/icon/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('icomoon.eot?m7ry51');
-  src:  url('icomoon.eot?m7ry51#iefix') format('embedded-opentype'),
-    url('icomoon.ttf?m7ry51') format('truetype'),
-    url('icomoon.woff?m7ry51') format('woff'),
-    url('icomoon.svg?m7ry51#icomoon') format('svg');
+  src:  url('icomoon.eot?lddyi0');
+  src:  url('icomoon.eot?lddyi0#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?lddyi0') format('truetype'),
+    url('icomoon.woff?lddyi0') format('woff'),
+    url('icomoon.svg?lddyi0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-minus:before {
+  content: "\e90f";
+}
+.icon-search:before {
+  content: "\e90e";
+}
 .icon-key:before {
   content: "\e90d";
 }
